<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_bookmark"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/title_bookmark" />

    <item
        android:id="@+id/navigation_searchSong"
        android:title="@string/title_searchSong"
        android:enabled="false" />
    <!--android:icon="@drawable/ic_searchsong_black_24dp"-->

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_black_24dp"
        android:title="@string/title_profile" />

</menu>