<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <!-- 🏠 Main App Screens -->
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.achordpany.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_bookmark"
        android:name="com.example.achordpany.ui.bookmark.BookmarkFragment"
        android:label="@string/title_bookmark"
        tools:layout="@layout/fragment_bookmark" />

    <fragment
        android:id="@+id/navigation_searchSong"
        android:name="com.example.achordpany.ui.search.SearchFragment"
        android:label="@string/title_searchSong"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.achordpany.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.achordpany.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />


    <!-- Settings Screens -->
    <fragment
        android:id="@+id/mainSettingsFragment"
        android:name="com.example.achordpany.ui.settings.MainSettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_mainsettings">
        <action
            android:id="@+id/action_mainSettingsFragment_to_changePassFragment"
            app:destination="@id/changePassFragment" />
    </fragment>

    <fragment
        android:id="@+id/changePassFragment"
        android:name="com.example.achordpany.ui.settings.ChangePasswordFragment"
        android:label="Change Password"
        tools:layout="@layout/fragment_changepass" />

    <fragment
        android:id="@+id/privacyPolicyFragment"
        android:name="com.example.achordpany.ui.settings.PrivacyPolicyFragment"
        android:label="Privacy Policy"
        tools:layout="@layout/fragment_privacypolicy" />

    <fragment
        android:id="@+id/termsConditionsFragment"
        android:name="com.example.achordpany.ui.settings.TermsConditionsFragment"
        android:label="Terms &amp; Conditions"
        tools:layout="@layout/fragment_termsconditions">
        <action
            android:id="@+id/action_mainSettingsFragment_to_termsConditionsFragment"
            app:destination="@id/termsConditionsFragment" />
    </fragment>

    <fragment
        android:id="@+id/aboutAppFragment"
        android:name="com.example.achordpany.ui.settings.AboutAppFragment"
        android:label="About App"
        tools:layout="@layout/fragment_aboutapp" />

</navigation>