<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">


    <!-- Header Layout with Back Button and Logo Image -->
    <RelativeLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Logo Image -->
        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:contentDescription="Logo"
            android:src="@drawable/logo_header"
            tools:ignore="HardcodedText" />

        <!-- Back Button -->
        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="9dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back"
            android:scaleType="centerInside"
            android:padding="8dp"
            android:src="@drawable/ic_return1"/>
    </RelativeLayout>

    <!-- Profile FAB on Top -->
    <!--<com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_profile"
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:maxImageSize="50dp"
        android:backgroundTint="@color/white"
        android:tint="@color/black"
        android:elevation="8dp"
        app:layout_constraintBottom_toTopOf="@id/cardContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:translationY="34dp"
        android:contentDescription="@string/selected_avatar" />-->

    <FrameLayout
        android:id="@+id/fabContainer"
        android:layout_width="74dp"
        android:layout_height="74dp"
        app:layout_constraintBottom_toTopOf="@id/cardContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:translationY="34dp"
        android:translationZ="10dp" >

        <!-- White Circular Background -->
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backgroundColor"
            android:elevation="16dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:clipToOutline="true"
            android:outlineProvider="background" />

        <!-- Avatar Image -->
        <ImageView
            android:id="@+id/avatarImageView"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:elevation="20dp"
            android:background="@drawable/circle_background"
            android:contentDescription="@string/selected_avatar" />
    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardContainer"
        android:layout_width="320dp"
        android:layout_height="400dp"
        app:cardBackgroundColor="@color/cardBackgroundColor"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btnContinue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">

            <!-- Text: Select Your Avatar -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_your_avatar"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/textColor"
                android:layout_marginTop="23dp"
                android:layout_marginBottom="8dp"/>

            <!-- RecyclerView for Avatars -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewAvatars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="400dp"
                android:overScrollMode="never"
                android:paddingHorizontal="8dp"
                app:layout_constraintTop_toBottomOf="@id/fabContainer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Continue Button -->
    <Button
        android:id="@+id/btnContinue"
        style="@style/RoundedButtonStyle"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="100dp"
        android:text=" Continue"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="HardcodedText" />

    <!-- Log In Link -->
    <TextView
        android:id="@+id/textHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:clickable="true"
        android:focusable="true"
        android:importantForAccessibility="yes"
        android:text="Already a member? Log In"
        android:textColor="@color/primaryColorShade_700"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnContinue"
        tools:ignore="HardcodedText,ContentDescription,LabelFor,TextSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>